I3: number guessing game complete

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,9 +2,12 @@
     <head></head>
     <body>
         <p>
-        The SECRET NUMBER is <%= answer %>
+            <%= message %>
         </p>
     </body>
 </html>
 
-
+<form>
+    <input type='text' name='guess' />
+    <input type='submit' value='Guess!' />    
+</form>
